--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "ag-grid-community": "^24.1.0",
+    "ag-grid-react": "^24.1.1",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-dom-factories": "^1.0.2",
+    "react-hook-form": "^6.11.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "validator": "^13.1.17",
     "web-vitals": "^0.2.4"
   },
   "homepage": "http://testing.blink.boardingschools.mx/",
