--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ag-grid-community": "^24.1.0",
     "ag-grid-react": "^24.1.1",
     "antd": "^4.8.2",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-alert": "^7.0.2",
