--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "ag-grid-react": "^24.1.1",
     "antd": "^4.8.2",
     "axios": "^0.21.0",
+    "basic-react-timepicker": "^1.0.0",
     "bootstrap": "^4.5.3",
+    "chroma-js": "^2.1.0",
     "react": "^17.0.1",
     "react-alert": "^7.0.2",
     "react-alert-template-basic": "^1.0.0",
@@ -21,6 +23,7 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-select": "^3.1.0",
     "validator": "^13.1.17",
     "web-vitals": "^0.2.4"
   },
