--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom-factories": "^1.0.2",
     "react-hook-form": "^6.11.0",
     "react-icons": "^3.11.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
