--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-hook-form": "^6.11.0",
     "react-icons": "^3.11.0",
     "react-loading": "^2.0.3",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
+    "redux": "^4.0.5",
     "sweetalert": "^2.1.2",
     "validator": "^13.1.17",
     "web-vitals": "^0.2.4"
