--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.2",
     "validator": "^13.1.17",
     "web-vitals": "^0.2.4"
