--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "basic-react-timepicker": "^1.0.0",
     "bootstrap": "^4.5.3",
     "chroma-js": "^2.1.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-alert": "^7.0.2",
     "react-alert-template-basic": "^1.0.0",
