--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "basic-react-timepicker": "^1.0.0",
     "bootstrap": "^4.5.3",
     "chroma-js": "^2.1.0",
+    "elemental": "^0.6.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-alert": "^7.0.2",
@@ -24,6 +25,7 @@
     "react-confirm-alert": "^2.6.2",
     "react-dom": "^17.0.1",
     "react-dom-factories": "^1.0.2",
+    "react-file-upload-mobile": "^1.0.2",
     "react-hook-form": "^6.11.0",
     "react-icons": "^3.11.0",
     "react-loading": "^2.0.3",
