--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.5.3",
     "chroma-js": "^2.1.0",
     "elemental": "^0.6.1",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-alert": "^7.0.2",
@@ -29,6 +30,7 @@
     "react-hook-form": "^6.11.0",
     "react-icons": "^3.11.0",
     "react-loading": "^2.0.3",
+    "react-loading-skeleton": "^2.1.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
