--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^3.11.0",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^2.1.1",
+    "react-modal-image": "^2.5.0",
     "react-notification-alert": "0.0.13",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
