--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chroma-js": "^2.1.0",
     "elemental": "^0.6.1",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "node-sass": "^4.14.1",
     "perfect-scrollbar": "^1.5.0",
     "react": "^17.0.1",
