--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "validator": "^13.1.17",
     "web-vitals": "^0.2.4"
   },
-  "homepage": "http://testing.blink.boardingschools.mx/",
+  "homepage": "https://testing.blink.boardingschools.mx/",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
