--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment-timezone": "^0.5.32",
     "node-sass": "^4.14.1",
     "perfect-scrollbar": "^1.5.0",
+    "rc-checkbox": "^2.3.2",
     "react": "^17.0.1",
     "react-alert": "^7.0.2",
     "react-alert-template-basic": "^1.0.0",
@@ -32,6 +33,7 @@
     "react-file-upload-mobile": "^1.0.2",
     "react-hook-form": "^6.11.0",
     "react-icons": "^3.11.0",
+    "react-input-checkbox": "^0.1.6",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^2.1.1",
     "react-modal-image": "^2.5.0",
