--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-sweetalert": "^5.2.0",
+    "react-bootstrap-time-picker": "^2.0.1",
     "react-confirm-alert": "^2.6.2",
+    "react-datepicker": "^3.6.0",
+    "react-datetime-bootstrap": "^1.4.7",
     "react-dom": "^17.0.1",
     "react-dom-factories": "^1.0.2",
     "react-file-upload-mobile": "^1.0.2",
