--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@ag-grid-enterprise/filter-tool-panel": "^25.0.1",
     "@ag-grid-enterprise/menu": "^25.0.1",
     "@atlaskit/tooltip": "^17.1.2",
+    "@devexpress/dx-react-core": "^2.7.5",
+    "@devexpress/dx-react-grid": "^2.7.5",
+    "@devexpress/dx-react-grid-bootstrap4": "^2.7.5",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "ag-grid-community": "^24.1.0",
+    "ag-grid-enterprise": "^25.1.0",
     "ag-grid-react": "^24.1.1",
     "antd": "^4.8.2",
     "axios": "^0.21.0",
