--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-notification-alert": "0.0.13",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.0",
     "react-select": "^3.1.0",
     "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
