--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "ag-grid-enterprise": "^25.1.0",
     "ag-grid-react": "^24.1.1",
     "antd": "^4.8.2",
+    "anychart-react": "^1.4.1",
     "axios": "^0.21.0",
     "basic-react-timepicker": "^1.0.0",
     "bootstrap": "^4.5.3",
     "chroma-js": "^2.1.0",
+    "d3": "^6.6.2",
     "elemental": "^0.6.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
     "node-sass": "^4.14.1",
@@ -51,6 +54,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
     "react-select": "^3.1.0",
+    "react-spring": "^9.1.1",
     "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
