--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-bootstrap-time-picker": "^2.0.1",
     "react-confirm-alert": "^2.6.2",
+    "react-csv": "^2.0.3",
     "react-datepicker": "^3.6.0",
     "react-datetime-bootstrap": "^1.4.7",
     "react-dom": "^17.0.1",
     "react-dom-factories": "^1.0.2",
+    "react-export-excel": "^0.5.3",
     "react-file-upload-mobile": "^1.0.2",
     "react-hook-form": "^6.11.0",
     "react-icons": "^3.11.0",
@@ -58,6 +60,7 @@
     "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "rsuite": "^4.10.0",
     "styled-components": "^5.2.3",
     "sweetalert": "^2.1.2",
     "validator": "^13.1.17",
