--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@devexpress/dx-react-core": "^2.7.5",
     "@devexpress/dx-react-grid": "^2.7.5",
     "@devexpress/dx-react-grid-bootstrap4": "^2.7.5",
+    "@progress/kendo-licensing": "^1.1.4",
+    "@progress/kendo-react-upload": "^4.6.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
@@ -31,6 +33,7 @@
     "node-sass": "^4.14.1",
     "perfect-scrollbar": "^1.5.0",
     "rc-checkbox": "^2.3.2",
+    "rc-upload": "^4.2.1",
     "react": "^17.0.1",
     "react-alert": "^7.0.2",
     "react-alert-template-basic": "^1.0.0",
