--- a/package.json
+++ b/package.json
@@ -48,13 +48,16 @@
     "react-dom-factories": "^1.0.2",
     "react-export-excel": "^0.5.3",
     "react-file-upload-mobile": "^1.0.2",
+    "react-google-docs-viewer": "^1.0.1",
     "react-hook-form": "^6.11.0",
     "react-icons": "^3.11.0",
+    "react-iframe-click": "^2.0.2",
     "react-input-checkbox": "^0.1.6",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^2.1.1",
     "react-modal-image": "^2.5.0",
     "react-notification-alert": "0.0.13",
+    "react-pdf": "^5.3.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
